Disable Azure pipelines to enable GH Actions build

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,8 +2,9 @@ trigger:
   batch: true
   branches:
     include:
-      - master
-      - refs/tags/*
+#       - master
+#       - refs/tags/*
+        - branch_not_found
 
 resources:
   containers:
