--- a/src/Marten.Storyteller/Marten.Storyteller.csproj
+++ b/src/Marten.Storyteller/Marten.Storyteller.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
+        <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
         <AssemblyName>Marten.Storyteller</AssemblyName>
         <OutputType>Exe</OutputType>
         <PackageId>Marten.Storyteller</PackageId>
