--- a/src/Marten.Schema.Testing/Marten.Schema.Testing.csproj
+++ b/src/Marten.Schema.Testing/Marten.Schema.Testing.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.1;net5.0</TargetFramework>
+        <TargetFrameworks>netcoreapp2.1;net5.0</TargetFrameworks>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
