--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,7 +38,7 @@ variables:
   marten_testing_database: "Host=localhost;Port=5432;Database=marten_testing;Username=postgres;Password=Password12!"
 
 jobs:
-  - job: Build .NET 5.0
+  - job: build-net5
     # timeoutInMinutes: 20
     pool:
       vmImage: 'ubuntu-latest'
