Update azure pipelines to set runtime to use net5

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,6 +65,7 @@ jobs:
         inputs:
           version: '5.0.x'
           packageType: runtime
+          includePreviewVersions: true
       - task: NodeTool@0
         displayName: Install Node.js
         inputs:
