--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,14 +57,13 @@ jobs:
       postgres: $[ variables['postgresService'] ]
     steps:
       - task: UseDotNet@2
-        displayName: Install .Net Core
+        displayName: Install .Net Core 3.1.x
+        inputs:
+          version: 3.1.x
+      - task: UseDotNet@2
+        displayName: Install .Net Core 5.0.x
         inputs:
           version: $(dotnet_core_version)
-          includePreviewVersions: true
-      - task: UseDotNet@2
-        inputs:
-          version: '5.0.x'
-          packageType: runtime
           includePreviewVersions: true
       - task: NodeTool@0
         displayName: Install Node.js
