--- a/.github/workflows/on-manual-do-nuget-publish.yml
+++ b/.github/workflows/on-manual-do-nuget-publish.yml
@@ -6,7 +6,7 @@ env:
   config: Release
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
-  dotnet_core_version: 5.0.100-rc.2.20479.15
+  dotnet_core_version: 5.0.x
 
 jobs:
   publish_job:
@@ -16,7 +16,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install .NET Core
+      - name: Install .NET Core 3.1.x
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 3.1.x
+
+      - name: Install .NET 5
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: ${{ env.dotnet_core_version }}
