--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -35,9 +35,9 @@
         <PackageReference Include="BaselineTypeDiscovery" Version="1.1.0" />
         <PackageReference Include="LamarCodeGeneration" Version="2.4.0" />
         <PackageReference Include="LamarCompiler" Version="2.3.0" />
-        <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-        <PackageReference Include="Npgsql" Version="[4.1.5,4.2.0)" />
-        <PackageReference Include="Npgsql.Json.NET" Version="[4.1.5,4.2.0)" />
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+        <PackageReference Include="Npgsql" Version="5.0.0" />
+        <PackageReference Include="Npgsql.Json.NET" Version="5.0.0" />
         <PackageReference Include="Remotion.Linq" Version="2.2.0" />
         <PackageReference Include="Baseline" Version="2.1.0" />
         <PackageReference Include="System.Memory" Version="4.5.4" />
