--- a/src/Marten.Testing.OtherAssembly/Marten.Testing.OtherAssembly.csproj
+++ b/src/Marten.Testing.OtherAssembly/Marten.Testing.OtherAssembly.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <Description>Dummy project for test scenario</Description>
         <Authors>Jeremy D. Miller;Tim Cools;Jeff Doolittle</Authors>
-        <TargetFrameworks>netstandard2.0</TargetFrameworks>
+        <TargetFrameworks>netstandard2.0;net5.0</TargetFrameworks>
         <AssemblyName>Marten.Testing.OtherAssembly</AssemblyName>
         <PackageId>Marten.Testing.OtherAssembly</PackageId>
         <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
