--- a/.github/workflows/on-manual-do-nuget-publish.yml
+++ b/.github/workflows/on-manual-do-nuget-publish.yml
@@ -6,7 +6,7 @@ env:
   config: Release
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
-  dotnet_core_version: 5.0.100-rc.2.20479.15
+  dotnet_core_version: 5.0.100
 
 jobs:
   publish_job:
