--- a/.github/workflows/on-push-do-ci-build-pg10.yml
+++ b/.github/workflows/on-push-do-ci-build-pg10.yml
@@ -10,6 +10,7 @@ on:
 
 env:
   config: Release
+  disable_test_parallelization: true
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
   dotnet_core_version: 3.1.x
