--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,7 @@ os: Visual Studio 2019
 
 environment:
   config: Release
+  disable_test_parallelization: true
   DOTNET_CLI_TELEMETRY_OPTOUT: true
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
   marten_testing_database: "Host=localhost;Port=5432;Database=marten_testing;Username=postgres;Password=Password12!"
