--- a/src/Marten.Schema.Testing/Marten.Schema.Testing.csproj
+++ b/src/Marten.Schema.Testing/Marten.Schema.Testing.csproj
@@ -6,9 +6,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
         <PackageReference Include="NSubstitute" Version="4.2.2" />
-        <PackageReference Include="Shouldly" Version="3.0.2" />
+        <PackageReference Include="Shouldly" Version="4.0.1" />
         <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
           <PrivateAssets>all</PrivateAssets>
@@ -39,5 +39,7 @@
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
     </ItemGroup>
-
+    <PropertyGroup>
+        <NoWarn>xUnit1013;CS0618</NoWarn>
+    </PropertyGroup>
 </Project>
