--- a/src/Marten.CommandLine.Testing/Marten.CommandLine.Testing.csproj
+++ b/src/Marten.CommandLine.Testing/Marten.CommandLine.Testing.csproj
@@ -1,8 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
-        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
