--- a/src/Marten.Schema.Testing/Marten.Schema.Testing.csproj
+++ b/src/Marten.Schema.Testing/Marten.Schema.Testing.csproj
@@ -2,7 +2,6 @@
 
     <PropertyGroup>
         <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
-        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
@@ -40,6 +39,6 @@
       </None>
     </ItemGroup>
     <PropertyGroup>
-        <NoWarn>xUnit1013;CS0618</NoWarn>
+        <NoWarn>xUnit1013</NoWarn>
     </PropertyGroup>
 </Project>
