--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -15,13 +15,7 @@
         <None Remove="Schema\SQL\mt_immutable_timestamptz.sql" />
     </ItemGroup>
     <ItemGroup>
-        <EmbeddedResource Include="Schema\SQL\mt_immutable_timestamptz.sql" />
-        <EmbeddedResource Include="Schema\SQL\mt_transforms.js" />
-        <EmbeddedResource Include="Schema\SQL\mt_patching.js" />
-        <EmbeddedResource Include="Schema\SQL\mt_mark_event_progression.sql" />
-        <EmbeddedResource Include="Schema\SQL\mt_immutable_timestamp.sql" />
-        <EmbeddedResource Include="Schema\SQL\mt_stream.sql" />
-        <EmbeddedResource Include="Schema\SQL\mt_get_next_hi.sql" />
+        <EmbeddedResource Include="Schema\SQL\*.*" />
         <EmbeddedResource Include="Schema\SchemaObjects.sql" />
     </ItemGroup>
     <ItemGroup>
