--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -22,7 +22,7 @@
         <PackageReference Include="BaselineTypeDiscovery" Version="1.1.0" />
         <PackageReference Include="LamarCodeGeneration" Version="2.5.0" />
         <PackageReference Include="LamarCompiler" Version="2.3.1" />
-        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="[3.0.0, 6.0.0]" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="[2.1.0, 6.0.0]" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
         <PackageReference Include="Npgsql" Version="5.0.0" />
         <PackageReference Include="Npgsql.Json.NET" Version="5.0.0" />
@@ -32,6 +32,7 @@
         <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.11.1" />
         <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.7.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="[2.1.0, 6.0.0]" />
+        <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="[2.1.0, 6.0.0]" />
     </ItemGroup>
 
     <!--SourceLink specific settings-->
