EventProjection, Aggregate, and View projections use event type filters. Closes GH-1721

--- a/src/Marten.AsyncDaemon.Testing/Marten.AsyncDaemon.Testing.csproj
+++ b/src/Marten.AsyncDaemon.Testing/Marten.AsyncDaemon.Testing.csproj
@@ -14,5 +14,6 @@
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Marten.Testing\Marten.Testing.csproj" />
+      <ProjectReference Include="..\Marten\Marten.csproj" />
     </ItemGroup>
 </Project>
