Nullability - Session, Queryables and event store

--- a/src/CommandLineRunner/CommandLineRunner.csproj
+++ b/src/CommandLineRunner/CommandLineRunner.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
         <UserSecretsId>dotnet-CommandLineRunner-144A5847-CAC2-4DF8-A6D4-C4150BB90A23</UserSecretsId>
+        <nullable>enable</nullable>
     </PropertyGroup>
 
     <ItemGroup>
