Update test projects to run MarkdownSnippets MSBuild task on build to update markdown samples

--- a/src/AspNetCoreWithMarten/AspNetCoreWithMarten.csproj
+++ b/src/AspNetCoreWithMarten/AspNetCoreWithMarten.csproj
@@ -9,4 +9,10 @@
       <ProjectReference Include="..\Marten\Marten.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MarkdownSnippets.MsBuild" Version="23.1.4">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
 </Project>
