--- a/src/Marten.CommandLine.Testing/Marten.CommandLine.Testing.csproj
+++ b/src/Marten.CommandLine.Testing/Marten.CommandLine.Testing.csproj
@@ -54,5 +54,10 @@
         <Link>ConnectionSource.cs</Link>
       </Compile>
     </ItemGroup>
-
+    <ItemGroup>
+      <PackageReference Include="MarkdownSnippets.MsBuild" Version="23.1.4">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
 </Project>
